styleSponsors.css
:root {
    --blue: #85A0DE;
    --lightBlue: #AEC0EA;
    /* --gray: rgb(135, 134, 134); */
    --forestGreen: #2e5e47;
    --darkBlue: #0c0444;
    --white: #fff;
    --black: #000;
  }
  
  * {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: 'Kumbh Sans', sans-serif;
  }
  
  html {
    scroll-behavior: smooth;
  }
  
  .nav-container {
    width: 100%;
    background-color: var(--blue);
    position: fixed;
    z-index: 4;
    border-bottom: var(--darkBlue) solid 4px;
  }
  
  .navbar {
      display: grid;
      grid-template-columns: 0.2fr auto 1fr;
      align-items: center;
      height: 65px;
      width: 90%;
      max-width: 1920px;
      margin: 0 auto;
  }
  
  #navbar-logo {
      color: var(--darkBlue);
      text-decoration: none;
      font-size: calc(2vw - .1rem);
      font-weight: 900;
      justify-self: start;
      margin-left: 20px;
      cursor: pointer;
      text-overflow: ellipsis;
  }
  
  .nav-menu {
      display: grid;
      grid-template-columns: repeat(6, auto);
      list-style: none;
      text-align: center;
      align-items: center;
      width: 100%;
      justify-self: end;
  }
  
  .nav-links {
      color: var(--darkBlue);
      font-size: 1.3rem;
      text-decoration: none;
  }
  
  .nav-links:hover {
      color: var(--white);
      transition: all 0.2s ease-out;
  }
  
  /* .nav-links-btn {
      background-color: var(--darkBlue);
      color: var(--blue);
      text-decoration: none;
      font-size: 1.3rem;
      padding: 6px 16px; 
      border-radius: 4px; 
  }
  
  .nav-links-btn:hover {
    background-color: var(--forestGreen);
    color: var(--white);
    text-decoration: none;
    padding: 5px 15px; 
    border-radius: 4px; 
    border: solid 1px var(--forestGreen);
    transition: all 0.3s ease-out;
  } */
  
  .menu-toggle .bar {
    width: 25px;
    height: 3px;
    margin: 5px auto;
    transition: all 0.3s ease-out;
    background: var(--white);
  }

@media screen and (max-width: 1020px) {
    .nav-container {
        position: fixed;
        background-color: var(--blue);
        border-bottom: none;
    }
  
    .nav-menu {
        display: grid;
        grid-template-columns: auto;
        background: var(--blue);
        margin: 0;
        width: 100%;
        height: 500px;
        position: absolute;
        top: 65px;
        left: -100%;
        opacity: 0;
        transition: all 0.5s ease;
        z-index: 3;
    }
  

    #navbar-logo {
        color: var(--darkBlue);
        margin-left: 20px;
        font-size: 2.2rem;
        top: 10px;
        position: absolute;
        align-items: center;
        justify-content: center;
        text-overflow: ellipsis;
    }
  
    .nav-menu.active {
        background: var(--blue);
        left: 0;
        opacity: 1;
        transition: all 0.5s ease;
    }
  
    .nav-links {
        background-color: var(--blue);
        color: var(--darkBlue);
        text-align: center;
        line-height: 60px;
        width: 100%;
        display: table;
        font-size: 1.3rem;
    }
  
    .nav-links:hover {
        background-color: var(--blue);
        color: var(--forestGreen);
        transition: all 0.4s ease;
    }
  
    /* .nav-links-btn {
        border: none;
        padding: 0;
        border-radius: 4px;
        padding: 8px 22px;
        background-color: var(--darkBlue);
        color: var(--blue);
        transition: all 0.4s ease-out;
        font-size: 1.3rem;
    }
  
    .nav-links-btn:hover {
        padding: 5px 15px; 
        border-radius: 4px;
        padding: 10px 28px;
        background-color: var(--forestGreen);
        color: var(--white);
        transition: all 0.1s ease-in-out;
    } */
  
    #mobile-menu { 
        position: absolute;
        top: 20%;
        right: 5%;
        transform: translate(5%, 20%);
        z-index: 2;
    }
  
    .menu-toggle .bar {
        display: block;
        cursor: pointer;
    }
  
    .menu-toggle:hover {
        cursor: pointer;
    }
  
    #mobile-menu.is-active .bar:nth-child(2) {
        opacity: 0;
    }
  
    #mobile-menu.is-active .bar:nth-child(1) {
        transform: translateY(8px) rotate(45deg);
    }
  
    #mobile-menu.is-active .bar:nth-child(3) {
        transform: translateY(-8px) rotate(-45deg);
    }
  }
  
  /* SPONSORS CSS */
  .sponsors {
    background-image: url("/images/TestFinalBlue.jpg");
    background-size: 20%;
    background-repeat: repeat;
    min-height: 90vh;
  }
  
  .sponsors-container {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 0 auto;
    background-color: var(--blue);
    border-radius: 0 0 50% 50%;
    border-bottom: var(--forestGreen) 60px solid;
    background-position: top left;
    background-repeat: no-repeat;
    z-index: 1;
    width: 100%;
    max-width: 1920px;
    padding: 0 50px;
    /* top: 65px; */
    min-height: 100vh;
    position: relative;
  }
  
  .sponsors-container h1 {
    font-family: 'sani Sans';
    font-style: normal;
    font-weight: 700;
    font-size: 7rem;

    color: #FFFFFF;
    text-shadow: 0px 8px 8px rgba(0, 0, 0, 0.25);  

    top: 100px;
    text-align: center;
    position: absolute;
  }

  .sponsors-container p {
    color: var(--white);
    font-size: 3vh;
    border: solid transparent 1px;
    top: 240px;
    width: 620px;
    align-items: center;
    text-align: center;
    justify-content: center;;
    position: absolute;
  }

  .sponsor-btn {
    font-size: 1.3rem;
    background-color: var(--darkBlue);
    padding: 14px 32px;
    border: none;
    outline: none;
    border-radius: 15px;
    color: #ffff;
    cursor: pointer;
    top: 340px;
    justify-content: center;
    align-items: center;
    position: absolute;
    transition: all 0.35s;
    z-index: 2;
  }

  .sponsor-btn a {
    position: relative;
    z-index: 1;
    color: #fff;
    text-decoration: none;
  }
/* ... */

